--- a/kodill-jdbc/src/exercise/exercise22.1
+++ b/kodill-jdbc/src/exercise/exercise22.1
@@ -1,12 +1,20 @@
+
 DROP PROCEDURE IF EXISTS ShowUser;
 
 DELIMITER $$
 
 CREATE PROCEDURE ShowUser(id INT)
 BEGIN
+DECLARE ERROR VARCHAR(30) DEFAULT "SOMETHIG SOMETHING GO WRONG";
+
+    IF id <= 0 THEN
+    SELECT ERROR;
+    ELSE
 	SELECT * FROM READERS WHERE READER_ID = id;
+    END IF;
+
 END $$
 
 DELIMITER ;
 
-CALL ShowUser(1);
+CALL ShowUser(0);
